# pubhealthllm

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  MULTIAGENT_PROMPTS.md  PROGRESS.md  README.md  app.py  main.py  requirements.txt  run_tests.sh
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.railway  lambda_handler.py  pyproject.toml  pytest.ini  requirements-lambda.txt  requirements.txt  server.py
backend/data/: healthgpt.db
backend/data/chroma_db/: chroma.sqlite3
backend/pubhealth_llm/app/: agent.py  config.py  db.py  orchestrator.py  planner.py  responder.py  schemas.py  tools.py
backend/pubhealth_llm/evals/: gold_set.yaml  (+3 more)
backend/scripts/: demo_run_ask.py  migrate_aurora.py  verify_railway.py
backend/tests/: conftest.py  test_agent_creation.py  test_agent_retry.py  test_agent_tools_extraction.py  test_anthropic_api.py  test_ask.py  test_aurora_migration.py  test_auth.py  test_build_vector_db.py  test_clerk_override.py  test_config.py  test_cors.py  test_decision_tree_elicitor.py  test_decision_tree_runner.py  test_decision_tree_schema.py  test_envelope_schemas.py  test_environment.py  test_evals_metrics.py  test_evals_runner.py  test_groq_api.py  test_health.py  test_integration.py  test_lambda_handler.py  test_measures.py  test_model_selection.py  test_model_smoke.py  test_mortality_tools.py  test_multi_tool_integration.py  test_orchestrator.py  test_planner.py  test_responder.py  test_schemas_multi_agent.py  test_sql_db.py  test_startup.py  test_tools.py  test_tools_aurora.py  test_vector_db.py  test_warmup.py
(+67 files in other folders)
