[project]
name = "pubhealth-llm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastapi-clerk-auth",

    # Agent framework — anthropic + openai as fallbacks, bedrock (boto3) for AWS port.
    # groq intentionally omitted (unused).
    # pydantic-ai (meta-package) already pulls pydantic-ai-slim with all provider
    # extras (anthropic, openai, bedrock/boto3 included); no extra spec needed here.
    "pydantic-ai>=1.105.0",
    "pydantic>=2.12.5",

    # PDF parsing (data_ingestion/build_vector_db.py only — lazy import, not in tests)
    "PyPDF2==3.0.1",

    # Data layer
    "pandas==3.0.2",
    "sqlalchemy==2.0.49",
    "requests==2.32.4",

    # Web scraping (MMWR index ingestion)
    "beautifulsoup4==4.14.3",

    # PyJWT — pin below 2.13.0 which added strict JWKS URI validation that
    # breaks ClerkHTTPBearer construction with an empty URL (test baseline: 2.10.1)
    "PyJWT<2.13.0",

    # Utilities
    "python-dotenv==1.2.2",
    "tqdm==4.67.3",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pubhealth_llm"]
